Closed
Bug 26283
Opened 26 years ago
Closed 26 years ago
cookie-alert/IMAP/NNTP/POP dialogs coming up blank, subsequent app hang/crash.
Categories
(SeaMonkey :: General, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: laurel, Assigned: danm.moz)
References
Details
(Keywords: crash, platform-parity, Whiteboard: [PDT+] mail verification done; waiting for verification on cookie-alert part.)
Using 2000-02-02-08m14 commercial build on linux rh6.0
Opening a news account then getting news dialogs of any kind (alerts, download
headers, etc.) will cause a hang/crash. The dialogs come up blank and even if
you can close them, app windows eventually blank out and app hangs/crashes.
1. Launch and go to mail window (I was using a POP profile).
2. Did not login to mail, went directly to news server, expanded it and
selected a group.
Different scenarios to use here:
A. click File|Subscribe (my subscribe dialog comes up blank, fenella's
didn't
B. select a group which will give you a download headers dialog (pref set
to warn you before downloading N headers (dialog is blank in all tests so far)
C. select a group which is not really on the server, in which case a "no
such group" alert dialog will pop up and is blank
3. Dismiss/close any dialog which appears.
4. Wait a little and notice windows going blank. Eventually hangs/crashes.
Talkback incidents: can't get to cyclone right now will update with incidents.
Repeated tries just accessing the subscribe dialog doesn't recreate the problem,
but scenarios with news alert dialogs or the download header dialog will
consistently cause the problem.
(still can't reach talkback server)
Comment 2•26 years ago
|
||
I'm not seeing any of this on my mozilla build, let me get my commercial build
going and see if I can reproduce this there.
Status: NEW → ASSIGNED
Comment 4•26 years ago
|
||
I may have misunderstood. let me test this again.
here's the stack trace from the talkback report:
0x00000000
nsWidget::DispatchEvent()
handle_toplevel_focus_out()
libgtk-1.2.so.0 + 0xf4229 (0x4062b229)
libgtk-1.2.so.0 + 0xb965d (0x405f065d)
libgtk-1.2.so.0 + 0xb8ab2 (0x405efab2)
libgtk-1.2.so.0 + 0xb6c05 (0x405edc05)
libgtk-1.2.so.0 + 0xeb9d8 (0x406229d8)
libgtk-1.2.so.0 + 0x8be1a (0x405c2e1a)
handle_gdk_event()
libgdk-1.2.so.0 + 0x170fb (0x4066b0fb)
libglib-1.2.so.0 + 0xfa86 (0x40698a86)
libglib-1.2.so.0 + 0x10041 (0x40699041)
libglib-1.2.so.0 + 0x100f4 (0x406990f4)
nsAppShell::DispatchNativeEvent()
nsWebShellWindow::ShowModalInternal()
nsWebShellWindow::ShowModal()
nsWebShellWindow::ShowModally()
GlobalWindowImpl::OpenInternal()
GlobalWindowImpl::OpenDialog()
nsCommonDialogs::DoDialog()
nsCommonDialogs::Alert()
nsWebShellWindow::Alert()
nsNetSupportDialog::Alert()
nsNNTPProtocol::NewsResponse()
nsNNTPProtocol::ProcessProtocolState()
nsMsgProtocol::OnDataAvailable()
nsOnDataAvailableEvent::HandleEvent()
nsStreamListenerEvent::HandlePLEvent()
PL_HandleEvent()
PL_ProcessPendingEvents()
nsEventQueueImpl::ProcessPendingEvents()
event_processor_callback()
our_gdk_io_invoke()
libglib-1.2.so.0 + 0xe3ca (0x406973ca)
libglib-1.2.so.0 + 0xfa86 (0x40698a86)
libglib-1.2.so.0 + 0x10041 (0x40699041)
libglib-1.2.so.0 + 0x101e1 (0x406991e1)
libgtk-1.2.so.0 + 0x8b7a9 (0x405c27a9)
nsAppShell::Run()
nsAppShellService::Run()
main1()
main()
libc.so.6 + 0x17cb3 (0x40219cb3)
Comment 5•26 years ago
|
||
Used 2000-02-02-M14 commercial build
1) If before I remove the registry & old profiles, it won't hang/crash -- I did
see the "blank" header download dialog, but still works normal after that.
2) If after I remove the registry & old profiles, I saw the "blank" dialog also
occurred on the mail (not only on News) and it will hang after that...
Comment 6•26 years ago
|
||
I used Linux 2000-02-02-09-M14 commercial build for IMAP mail account
Comment 8•26 years ago
|
||
Strange!! It seemed it not occurred every time.
Maybe is time concering problem...If I followed the exact procrdures from
Laurel with POP mail account & select the news directly and I wait for dialog
display completely for next step....I only had the blank dialog for the final
alert dialog and it won't hang/crash...
Priority: P3 → P1
Comment 9•26 years ago
|
||
I am still getting the blank password dialog for the IMAP mail account, and
after that, I cannot get into IMAP, it keep hanging.....
I am wondering know whether this is hitting the IMAP problem or not?.....
Comment 10•26 years ago
|
||
I'm seeing weird stuff, too.
pop, imap, and nntp auth.
it doesn't happen all the time, but most of the time.
adding blizzard and pavlov and danm, in case they know of some dialog problems
on linux today.
Comment 11•26 years ago
|
||
Yes. I had the same feeling that it seemed that this is general problem....
Kind of dialog "Focus" or time concerning problem....if my mouse not focus on
the browser a little while....it will display blank after that!! Cc: nbaca,
fenella. Updating the summary to general issue. Nomating gdogfood [PDT+]
Keywords: dogfood
Summary: News dialogs coming up blank, subsequent app hang/crash. → IMAP/NNTP/POP dialogs coming up blank, subsequent app hang/crash.
Whiteboard: [PDT+]
Comment 12•26 years ago
|
||
Problem still occurred on latest Linux 2000-02-02-14-M14 commercial build...
Comment 13•26 years ago
|
||
adding alecf to the cc list.
I can get the window to paint, by clicking around. but I am definitely seeing
the hang.
Comment 14•26 years ago
|
||
Let PDT review team to decide PDT+ or not....remove PDT+!!
Whiteboard: [PDT+]
Comment 15•26 years ago
|
||
I think the problem is that the first password dialog
and the signon database password dialog are not
playing together nicely on linux.
work around appears to be to NOT remember password
(don't check that bottom left checkbox in the password dialog)
Target Milestone: M14
Comment 18•26 years ago
|
||
I'm also seeing this (Linux). If it's any help, this
has been happening since the new repeating prioritized
timers went in on *nix.
http://bugzilla.mozilla.org/show_bug.cgi?id=22979
(Not that they're necessarily to blame, of course.)
If I go to the 'blank' dialog and click where I think
a button is then the dialog paints and the button action
occurs okay (but Mozilla henceforth keeps spinning on the
CPU and the problem still persists in other windows over
time).
I was going to file this as "Mozilla Keeps Going Into Orbit"
but someone had already filed this nice serious bug.
--Adam
Updated•26 years ago
|
Summary: IMAP/NNTP/POP dialogs coming up blank, subsequent app hang/crash. → cookie-alert/IMAP/NNTP/POP dialogs coming up blank, subsequent app hang/crash.
Comment 19•26 years ago
|
||
This bug is not by any means specific to MailNews --
it happens on cookie-alerts in the browser, for example.
Changing 'product' and 'component' fields.
Component: Back End → XPFE
Product: MailNews → Architecture
Version: other → 5.0
Comment 20•26 years ago
|
||
Lisa, so who is the QA contact that I need to assign to for this bug?
| Assignee | ||
Comment 21•26 years ago
|
||
Thanks for the additional helpful descriptions, Adam. I'd add that on my Linux
build, I see only one of these problems (the blank POP password dialog whose
appearance makes the entire app UI go largely unresponsive from then on). The
dialog can be stimulated to draw by passing the mouse over it repeatedly, and as
Adam notes, the content seems to be present, just undrawn. And the app remains in
the modal event loop (see sspitzer's stack trace above) even after the window has
been dismissed.
It seems like there is more than one underlying problem here. I'm going to
start with the strange case of the never-ending modal event loop. I've traced
that back as far as a missing OnEndDocumentLoad event, which implies something
amiss in RDF or the parser or necko or timers or my breakfast this morning. That
alone probably doesn't explain all the symptoms, but it does make this bug
dependent on 26129. Keeping this one for now, and handing off 26129.
Depends on: 26129
| Assignee | ||
Comment 22•26 years ago
|
||
Since 26129 was fixed, this bug is nearly fixed. The only bad behaviour I still
see with today's source is a failure of the POP password dialog contents to draw
until it's encouraged by, say, waving the mouse over it for a while. All the evil
stuff seems fixed. Is anyone else seeing anything worse?
Comment 23•26 years ago
|
||
Change QA Contact back to Lisa but Cc: myself.
Let Lisa assign this bug to the right person -- since this bug not only happened
on mail and it also happened for the general dialog!
QA Contact: huang → lchiang
Comment 24•26 years ago
|
||
This is a general problem in JS alerts, as indicated in the following dup:
Comment 25•26 years ago
|
||
*** Bug 26874 has been marked as a duplicate of this bug. ***
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 26•26 years ago
|
||
This was another instance of nsTimersGTK inexplicably not working with modal
dialogs up. I've (temporarily) disabled the use of timers to coalesce expose
events, which fixes the problem. In the long run, we need to find out what's
wrong with timers.
Comment 27•26 years ago
|
||
Karen, verify for the mail case and note it here and afterwards, I'll change the
QA contact to someone who tests cookies for the rest of the verification.
Comment 28•26 years ago
|
||
OK. I will verify this bug for mail/news on this morning build.
Comment 29•26 years ago
|
||
It works OK on today's Linux 2000-02-09-08-M14 commercial build:
OK for the following scenarios:
1) Original scenario: News Subscribe & Alert Alert dialogs displayed completely
without blank/hangs/crashes.
2) POP mail account password dialog displayed completely without blank/hangs.
3) IMAP mail account password dialog displayed completely without blank/hangs.
Lisa, I already completed the mail/News verification, you can either "assign
back to me & Cc:someone who tests cookies part" or "assign to someone who tests
cookies part & Cc:me"....then we can marking as verified for this bug. Thanks.
Comment 30•26 years ago
|
||
adam@gimp.org - since you say this occurs on cookie-alerts, can you verify that
this is now ok for you?
Whiteboard: [PDT+] → [PDT+] mail verification done; waiting for verification on cookie-alert part.
Comment 31•26 years ago
|
||
OK too for Linux 02-11-11-M14 commercial build on Mail/News.
Since we didn't hear the response from adam@gimap.org,
Cc: elig who is the QA of bug#26874(dup of this bug for browser group)
elig, can you verify bug#26874 & put the comments on this bug?
So we can know what the status for this bug?
At least the Mail/News is no problem for this bug now....
Comment 32•26 years ago
|
||
Bug #26874 is too imprecisely written to be meaningfully verified; lots of types
of dialogs have OK/Cancel, and the only one I tried (file picker) worked fine.
(Fortunately, the problem is so readily obvious that if it's not in fact fixed,
we'll be receiving a stream of follow-up reports from Linux users, so it's fine
with me if you consider it verified/fixed.)
Comment 33•26 years ago
|
||
elig, thanks for the updates.
Lisa, can we mark as verified for this bug?
Comment 35•26 years ago
|
||
Whoops, sorry I missed the comment addressed to me. I assumed that Bugzilla
would automatically add me to the CC: list for this bug so I'd get email
notifications of change, but I haven't been.
I can (belatedly) verify that this is fixed -- thanks, all.
--Adam
Comment 36•25 years ago
|
||
moving from architecture product to Browser. Architecture product is going
away.
Component: XPFE → Browser-General
Product: Architecture → Browser
Target Milestone: M14 → ---
Version: 5.0 → other
Updated•21 years ago
|
Product: Browser → Seamonkey
| Comment hidden (collapsed) |
You need to log in
before you can comment on or make changes to this bug.
Description
•