disable expose event coalescing while nsTimers are broken in modal windows. bug 26283. r:pavlov